--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>calss 2</title>
+    <script src="./script1.js"></script>
 </head>
 <body>
+    <h1>SHOP REGISTER</h1>
+<form onsubmit="whensubmit(event)" >
+   <label >Name</label> <input name="name" type="text" placeholder="Name"/> <br><br>
+   <label >Address</label> <input name="address" type="text" placeholder="Address"/><br><br>
+   <label >Phone Number</label> <input name="phonenumber" type="text" placeholder="Phone Number"/><br><br>
+   <button type="submit"> Register </button>
+</form>
+<img src="./tom and jerry.jpg" alt="">
     
 </body>
 </html>
